# voice-chat-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  main.py  pyproject.toml  run_tests.sh  security.py
backend/tests/: conftest.py  test_main.py
frontend/: Dockerfile  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ErrorBoundary.tsx  ErrorNotification.tsx
frontend/src/config/: environment.ts
frontend/src/types/: api.ts
frontend/src/utils/: apiClient.ts  audioProcessor.ts  cache.ts  errorHandler.ts
